# rofi

./: .atom-build.json  .build.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  404.html  AUTHORS  CODE_OF_CONDUCT.md  CONFIG.md  COPYING  Changelog  Contact.md  INSTALL.md  LICENSE  Links.md  Makefile  Makefile.am  PKGBUILD  README.md  Screenshots.md  Scripts.md  _config.yml  configure.ac  generator.html  index.html  index.md  libgwater-wayland-nolibtool.mk  libgwater-xcb-nolibtool.mk  manpage.html  meson-dist-script  meson.build  meson_options.txt  old.md  p05-Themes.md  p06-Screenshots.md  p07-Scripts.md  p08-INSTALL.md  p09-Contact.md  (+9 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation_report.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  codeql.yml  lock.yml  main.yml  mkdocs.yml
1.7.0/rofi-script.5/: index.html
1.7.0/rofi-theme.5/: index.html
1.7.0/rofi.1/: index.html
1.7.1/rofi-script.5/: index.html
1.7.1/rofi-theme.5/: index.html
1.7.1/rofi.1/: index.html
1.7.2/rofi-script.5/: index.html
1.7.2/rofi-theme.5/: index.html
1.7.2/rofi.1/: index.html
1.7.3/rofi-debugging.5/: index.html
1.7.3/rofi-dmenu.5/: index.html
1.7.3/rofi-keys.5/: index.html
1.7.3/rofi-script.5/: index.html
1.7.3/rofi-theme.5/: index.html
1.7.3/rofi.1/: index.html
1.7.4/rofi-debugging.5/: index.html
1.7.4/rofi-dmenu.5/: index.html
1.7.4/rofi-keys.5/: index.html
1.7.4/rofi-script.5/: index.html
1.7.4/rofi-theme.5/: index.html
1.7.4/rofi.1/: index.html
CONFIG/: index.html
COPYING/: index.html
Examples/: brightness_rofi.sh  domo_rofi_script.sh  finder.sh  i3_empty_workspace.sh  i3_switch_workspaces.sh  rofi-calculator.sh  rofi-file-browser.sh  test_script_env.sh  test_script_mode.sh  test_script_mode_color.sh  test_script_mode_delim.sh
INSTALL/: index.html
_layouts/: default.html  generator.html  post.html
config/: config.c  config.def.c
data/: rofi-theme-selector.desktop  rofi.desktop  tracklist_testfile.tar.xz  uncrustify.cfg
doc/: README  README.md  create_screenshot.sh  default_configuration.rasi  default_theme.rasi  example.xresources  generate-manpage.sh  help-output.txt  man_filter.lua  meson.build  meson_build_manpages.sh  mpc.json  old-theme-convert-input.theme  old-theme-convert-output.rasi  rofi-debugging.5  rofi-debugging.5.markdown  rofi-dmenu.5  rofi-dmenu.5.markdown  rofi-keys.5  rofi-keys.5.markdown  rofi-manpage.markdown  rofi-script.5  rofi-script.5.markdown  rofi-sensible-terminal.1  rofi-sensible-terminal.1.markdown  rofi-theme-manpage.markdown  rofi-theme-selector.1  rofi-theme-selector.1.markdown  rofi-theme.5  rofi-theme.5.markdown  rofi-thumbnails.5.markdown  rofi.1  rofi.1.markdown  rofi.doxy  rofi.doxy.in  simpleswitcher.1  test_xr.txt  theme3-tutorial.md  themer.md
doc/Notes/Theme/Positioning/: theme3-positioning.markdown
doc/Notes/Theme/Transparency/: theme3-transparency.markdown
doc/theme3/: convert.md  index.md  specification.md
downloads/: index.html
include/: box.h  css-colors.h  default-theme.h  display-internal.h  display.h  dmenu-dialog.h  helper-theme.h  helper.h  history.h  i3-support.h  json-dialog.h  keyb.h  mark-dialog.h  md5.h  mode-private.h  mode.h  profile-dialog.h  rofi-i3.h  rofi-icon-fetcher.h  rofi-types.h  rofi.h  run-dialog.h  script-dialog.h  scrollbar.h  separator.h  settings.h  simpleswitcher.h  ssh-dialog.h  textbox.h  theme.h  timings.h  view-internal.h  view.h  wayland-internal.h  wayland.h  widget.h  window-dialog.h  x11-event-source.h  x11-helper.h  xcb-internal.h  (+4 more)
lexer/: theme-lexer.l  theme-parser.y
m4/: ax_prog_flex_version.m4
mkdocs/: mkdocs.yml
pkgconfig/: rofi.pc.in
protocols/: wlr-layer-shell-unstable-v1.xml
resources/: resources.xml
script/: dist.sh  get_git_rev.sh  rofi-convert-theme.sh  rofi-create-screenshot-theme3.sh  rofi-create-screenshot.sh  rofi-sensible-terminal  rofi-theme-selector
search/: search_index.json
source/: box.c  css-colors.c  display.c  dmenu-dialog.c  helper.c  history.c  i3-support.c  json-dialog.c  keyb-layout.c  keyb.c  mark-dialog.c  md5.c  mode.c  profile-dialog.c  rofi-i3.c  rofi-icon-fetcher.c  rofi-types.c  rofi.c  run-dialog.c  script-dialog.c  scrollbar.c  separator.c  simpleswitcher.c  ssh-dialog.c  textbox.c  theme.c  timings.c  view.c  wayland.c  widget.c  window-dialog.c  x11-event-source.c  x11-helper.c  xcb.c  xkb.c  xrmoptions-dummy.c  xrmoptions.c
stylesheets/: generator.css  print.css  stylesheet.css
subprojects/: xcb
test/: Makefile  Makefile.am  box-test.c  convert_old_theme_test.sh  default_theme_test.sh  help_output_test.sh  helper-config-cmdline-parser.c  helper-expand.c  helper-pidfile.c  helper-test.c  helper-tokenize.c  history-test.c  mode-test.c  run_all_tests.sh  run_combi_mode_format.sh  run_combi_test.sh  run_daemon_test.sh  run_dmenu_custom_test.sh  run_dmenu_empty.sh  run_dmenu_issue_292.sh  run_dmenu_normal_window_test.sh  run_dmenu_test.sh  run_drun_test.sh  run_errormsg_test.sh  run_fuzzy_test.sh  run_glob_test.sh  run_issue333_test.sh  run_issue_256.sh  run_issue_275.sh  run_regex_test.sh  run_run_test.sh  run_screenshot_test.sh  run_script_meta_test.sh  run_script_test.sh  run_switchdialog_test.sh  run_test.sh  run_window_test.sh  scrollbar-test.c  test_script.sh  textbox-test.c  (+4 more)
themes/: Adapta-Nokto.rasi  Adapta-Nokto.theme  Arc-Dark.rasi  Arc.rasi  Arc.theme  DarkBlue.rasi  DarkBlue.theme  Indego.rasi  Indego.theme  Monokai.rasi  Monokai.theme  Paper.rasi  Paper.theme  Pop-Dark.rasi  android_notification.rasi  android_notification.theme  arthur.rasi  blor.theme  blue.rasi  blue.theme  c64.rasi  c64.theme  capture.sh  default.rasi  dmenu.rasi  docu.rasi  fancy.rasi  fancy2.rasi  fullscreen-preview.rasi  glue_pro_blue.rasi  glue_pro_blue.theme  gruvbox-common.rasi  gruvbox-common.rasinc  gruvbox-dark-hard.rasi  gruvbox-dark-hard.theme  gruvbox-dark-soft.rasi  gruvbox-dark-soft.theme  gruvbox-dark.rasi  gruvbox-dark.theme  gruvbox-light-hard.rasi  (+21 more)
(+143 files in other folders)
